--- a/TODO.txt
+++ b/TODO.txt
@@ -4,3 +4,4 @@ Mouse handler
 Action queue to remove unecessary function calls
 Assert
 Negative width or height means that row/column is hidden
+Use setCapacity on clear and setRowCount...
