--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 Controller to make any changes
-update() when it necessary
+Q_FUNC_INFO
 Mouse handler
-Action queue to remove unecessary function calls
+Action queue to remove unnecessary function calls
 Assert
 Negative width or height means that row/column is hidden
 Use setCapacity on clear and setRowCount...
-Q_FUNC_INFO
+Optimize painting with selecting update rectangles
