--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-Mouse handler
+Problem with using shift and several cell types
 Merge and mouse
 Action queue to remove unnecessary function calls
 Cell flags (Selection, Editing, Enabled)
