--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,10 @@
 Problem with using shift and several cell types
+Inserting/removing rows and some properties
+Check for asserts
 Merge and mouse
+Merge and keyboard
 Action queue to remove unnecessary function calls
 Cell flags (Selection, Editing, Enabled)
+Selection types: Select row, column, cell
 Use setCapacity on clear and setRowCount...
 Optimize painting with selecting update rectangles
