--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 Inserting/removing rows and some properties
 Check for asserts
 Cell editing
+Sort
 Merge and mouse
 Merge and keyboard
 Merge and cell editing
